--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Historical chart view",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
     "start": "node src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,16 +13,16 @@
   "license": "ISC",
   "repository": "none",
   "dependencies": {
-    "apollo-server-express": "^2.17.0",
+    "apollo-server-express": "^3.1.2",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3"
   },
   "engines": {
-    "node": "12.x"
+    "node": "16.x"
   }
 }
